style.css
/* ... */
.outline-params h2 {
    display: block;
}

.outline-params .spacer-group {
    display: none;
}

.option-hide-headers-params .outline-params h2 {
    display: none;
}

.option-hide-headers-params .outline-params .spacer-group {
    display: block;
}

#layout-extras .outline-params h2 {
    display: block;
}

#layout-extras .outline-params .spacer-group {
    display: none;
}

#tab-gallery-folders,
#tab-gallery-files {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

#tab-gallery-folders {
    justify-content: start;
}

#tab-gallery-files {
    justify-content: space-evenly;
    background-color: var(--sd-input-background-color);
}

#tab-gallery-sort-buttons>.form {
    display: flex;
}

gallery-folder {
    padding: 0;
}

.gallery-sort,
gallery-folder {
    font-family: 'NotoSans';
}
gallery-folder:hover {
    color: var(--sd-input-hover-text-color);
}

#split-settings-left { min-width: 10em }

.splash { position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 1000; display: block; text-align: center; }
.motd { margin-top: 2em; color: white; font-family: monospace; font-variant: all-petite-caps; }
.splash-img { margin: 10% auto 0 auto; width: 512px; background-repeat: no-repeat; height: 512px; animation: color 10s infinite alternate; }
.loading { color: white; position: absolute; top: 20%; left: 50%; transform: translateX(-50%); }
.loader { width: 300px; height: 300px; border: var(--spacing-md) solid transparent; border-radius: 50%; border-top: var(--spacing-md) solid var(--sd-main-accent-color); animation: spin 4s linear infinite; position: relative; }
.loader::before, .loader::after { content: ""; position: absolute; top: 6px; bottom: 6px; left: 6px; right: 6px; border-radius: 50%; border: var(--spacing-md) solid transparent; }
.loader::before { border-top-color: var(--sd-main-accent-color); animation: 3s spin linear infinite; filter: brightness(50%); }
.loader::after { border-top-color: var(--sd-main-accent-color); animation: spin 1.5s linear infinite; filter: brightness(150%); }
@keyframes move { from { background-position-x: 0, -40px; } to { background-position-x: 0, 40px; } }
@keyframes spin { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
@keyframes color { from { filter: hue-rotate(0deg) } to { filter: hue-rotate(360deg) } }

.grow .gradio-tabs {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}
.grow .gradio-tabs > .gradio-tabitem {
    flex-grow: 1;
}
.grow .gradio-tabs > .gradio-tabitem > .gap {
     height: 100%;
}

.grow .gradio-tabs > .gradio-tabitem > .gap > div{
    flex-grow: 0;
}
.grow .gradio-tabs > .gradio-tabitem > .gap > .gradio-image,
.grow .gradio-tabs > .gradio-tabitem > .gap > .gradio-video,
.grow .gradio-tabs > .gradio-tabitem > .gap > .gradio-file,
.grow .gradio-tabs > .gradio-tabitem > .gap > .gradio-row:has(>.gradio-image),
.grow .gradio-tabs > .gradio-tabitem > .gap > .gradio-row:has(>.gradio-video),
.grow .gradio-tabs > .gradio-tabitem > .gap > .gradio-row:has(>.gradio-file) {
    flex-grow: 1;
}

.grow .layout {
    overflow: auto;
}

/* gr.table is based on svelte-virtual-table which means there are two table elements and neither have all rows */

.table-wrap {
  height: max-content !important;
}

.table-wrap table {
  width: 100%;
  display: block;
  border-collapse: separate;
  border-spacing: var(--sd-group-gap);
}

.table-wrap table caption {
  display: none;
}

.table-wrap table thead {
  background: var(--sd-panel-border-color);
  word-break: auto-phrase;
  display: none;
}

.table-wrap table tbody {
  display: none;
}

.table-wrap table tbody tr:nth-child(odd) {
  background-color: var(--sd-input-background-color);
}

.table-wrap table tbody tr:nth-child(even) {
  background-color: var(--sd-input-border-color);
}

.table-wrap table td {
  word-break: auto-phrase;
  width: min-content !important;
}

.table-wrap svelte-virtual-table-viewport table {
  display: block;
  overflow: auto;
}

.table-wrap svelte-virtual-table-viewport table thead {
  display: table-header-group !important;
}

.table-wrap svelte-virtual-table-viewport table tbody {
  display: table-row-group !important;
}

.card:has(>img[src*="card-no-preview.png"])::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    border-radius: var(--sd-border-radius);
    mix-blend-mode: multiply;
    background-color: var(--data-color);
}

.infotext > p {
  margin-bottom: var(--sd-group-gap);
}

.styles {
  gap: 0;
}

/* gr.json */

.json-node {
  display: inline;
  color: var(--sd-label-color);
  line-height: var(--sd-input-line-height);
  font-family: monospace;
}

.json-node .children {
  padding-left: var(--sd-gap-size);
}

.json-node .spacer {
  display: inline-block;
  width: 0;
  height: 0;
}

.json-node .json-item {
  display: inline;
}

.json-node .number {
  color: var(--color-blue);
}

.json-node .string {
  color: var(--color-green);
}

.json-node .bool {
  color: var(--color-red);
}

.gradio-json button {
  display: none;
  position: absolute;
  top: 3em;
  right: 1em;
  width: 2em;
}

#control-result {
  text-wrap: wrap;
}

#control-result p {
  padding: var(--sd-group-padding) !important;
}

/* en item details */

#control_extra_details_img {
  max-height: 50vh;
}

#control_extra_details_img img {
  height: 100%;
  overflow: hidden;
  object-fit: contain;
}

